ingress/avib_backend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avib-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 500M
spec:
  rules:
    - host: avispe.edv.uniovi.es
      http:
        paths:
          - path: /morphingprojections-backend(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: uniovi-avib-morphingprojections-backend
                port:
                  name: http
