ingress/avib_portal_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: avib-portal-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: avispe.edv.uniovi.es
      http:
        paths:
          - path: /morphingprojections-portal(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: uniovi-avib-morphingprojections-portal
                port:
                  name: http
